Change MCreator mapping names for Forge like names
I hate mappings. I hope Spigot has same mapping format than Fabric.

--- a/src/fabric-1.16.2/mappings/sounds.yaml
+++ b/src/fabric-1.16.2/mappings/sounds.yaml
@@ -815,146 +815,147 @@ block.beehive.enter: BLOCK_BEEHIVE_ENTER
 block.beehive.exit: BLOCK_BEEHIVE_EXIT
 block.beehive.shear: BLOCK_BEEHIVE_SHEAR
 block.beehive.work: BLOCK_BEEHIVE_WORK
-AMBIENT_BASALT_DELTAS_ADDITIONS: AMBIENT_BASALT_DELTAS_ADDITIONS
-AMBIENT_BASALT_DELTAS_LOOP: AMBIENT_BASALT_DELTAS_LOOP
-AMBIENT_BASALT_DELTAS_MOOD: AMBIENT_BASALT_DELTAS_MOOD
-AMBIENT_CRIMSON_FOREST_ADDITIONS: AMBIENT_CRIMSON_FOREST_ADDITIONS
-AMBIENT_CRIMSON_FOREST_LOOP: AMBIENT_CRIMSON_FOREST_LOOP
-AMBIENT_CRIMSON_FOREST_MOOD: AMBIENT_CRIMSON_FOREST_MOOD
-AMBIENT_NETHER_WASTES_ADDITIONS: AMBIENT_NETHER_WASTES_ADDITIONS
-AMBIENT_NETHER_WASTES_LOOP: AMBIENT_NETHER_WASTES_LOOP
-AMBIENT_NETHER_WASTES_MOOD: AMBIENT_NETHER_WASTES_MOOD
-AMBIENT_SOUL_SAND_VALLEY_ADDITIONS: AMBIENT_SOUL_SAND_VALLEY_ADDITIONS
-AMBIENT_SOUL_SAND_VALLEY_LOOP: AMBIENT_SOUL_SAND_VALLEY_LOOP
-AMBIENT_SOUL_SAND_VALLEY_MOOD: AMBIENT_SOUL_SAND_VALLEY_MOOD
-AMBIENT_WARPED_FOREST_ADDITIONS: AMBIENT_WARPED_FOREST_ADDITIONS
-AMBIENT_WARPED_FOREST_LOOP: AMBIENT_WARPED_FOREST_LOOP
-AMBIENT_WARPED_FOREST_MOOD: AMBIENT_WARPED_FOREST_MOOD
-BLOCK_ANCIENT_DEBRIS_BREAK: BLOCK_ANCIENT_DEBRIS_BREAK
-BLOCK_ANCIENT_DEBRIS_FALL: BLOCK_ANCIENT_DEBRIS_FALL
-BLOCK_ANCIENT_DEBRIS_HIT: BLOCK_ANCIENT_DEBRIS_HIT
-BLOCK_ANCIENT_DEBRIS_PLACE: BLOCK_ANCIENT_DEBRIS_PLACE
-BLOCK_ANCIENT_DEBRIS_STEP: BLOCK_ANCIENT_DEBRIS_STEP
-BLOCK_BASALT_BREAK: BLOCK_BASALT_BREAK
-BLOCK_BASALT_FALL: BLOCK_BASALT_FALL
-BLOCK_BASALT_HIT: BLOCK_BASALT_HIT
-BLOCK_BASALT_PLACE: BLOCK_BASALT_PLACE
-BLOCK_BASALT_STEP: BLOCK_BASALT_STEP
-BLOCK_CHAIN_BREAK: BLOCK_CHAIN_BREAK
-BLOCK_CHAIN_FALL: BLOCK_CHAIN_FALL
-BLOCK_CHAIN_HIT: BLOCK_CHAIN_HIT
-BLOCK_CHAIN_PLACE: BLOCK_CHAIN_PLACE
-BLOCK_FUNGUS_BREAK: BLOCK_FUNGUS_BREAK
-BLOCK_FUNGUS_FALL: BLOCK_FUNGUS_FALL
-BLOCK_FUNGUS_HIT: BLOCK_FUNGUS_HIT
-BLOCK_FUNGUS_PLACE: BLOCK_FUNGUS_PLACE
-BLOCK_FUNGUS_STEP: BLOCK_FUNGUS_STEP
-BLOCK_GILDED_BLACKSTONE_BREAK: BLOCK_GILDED_BLACKSTONE_BREAK
-BLOCK_GILDED_BLACKSTONE_FALL: BLOCK_GILDED_BLACKSTONE_FALL
-BLOCK_GILDED_BLACKSTONE_HIT: BLOCK_GILDED_BLACKSTONE_HIT
-BLOCK_GILDED_BLACKSTONE_PLACE: BLOCK_GILDED_BLACKSTONE_PLACE
-BLOCK_GILDED_BLACKSTONE_STEP: BLOCK_GILDED_BLACKSTONE_STEP
-BLOCK_LODESTONE_BREAK: BLOCK_LODESTONE_BREAK
-BLOCK_LODESTONE_FALL: BLOCK_LODESTONE_FALL
-BLOCK_LODESTONE_HIT: BLOCK_LODESTONE_HIT
-BLOCK_LODESTONE_PLACE: BLOCK_LODESTONE_PLACE
-BLOCK_LODESTONE_STEP: BLOCK_LODESTONE_STEP
-BLOCK_NETHERITE_BLOCK_BREAK: BLOCK_NETHERITE_BLOCK_BREAK
-BLOCK_NETHERITE_BLOCK_FALL: BLOCK_NETHERITE_BLOCK_FALL
-BLOCK_NETHERITE_BLOCK_HIT: BLOCK_NETHERITE_BLOCK_HIT
-BLOCK_NETHERITE_BLOCK_PLACE: BLOCK_NETHERITE_BLOCK_PLACE
-BLOCK_NETHERITE_BLOCK_STEP: BLOCK_NETHERITE_BLOCK_STEP
-BLOCK_NETHER_GOLD_ORE_BREAK: BLOCK_NETHER_GOLD_ORE_BREAK
-BLOCK_NETHER_GOLD_ORE_FALL: BLOCK_NETHER_GOLD_ORE_FALL
-BLOCK_NETHER_GOLD_ORE_HIT: BLOCK_NETHER_GOLD_ORE_HIT
-BLOCK_NETHER_GOLD_ORE_PLACE: BLOCK_NETHER_GOLD_ORE_PLACE
-BLOCK_NETHER_GOLD_ORE_STEP: BLOCK_NETHER_GOLD_ORE_STEP
-BLOCK_NETHER_ORE_BREAK: BLOCK_NETHER_ORE_BREAK
-BLOCK_NETHER_ORE_FALL: BLOCK_NETHER_ORE_FALL
-BLOCK_NETHER_ORE_HIT: BLOCK_NETHER_ORE_HIT
-BLOCK_NETHER_ORE_PLACE: BLOCK_NETHER_ORE_PLACE
-BLOCK_NETHER_ORE_STEP: BLOCK_NETHER_ORE_STEP
-BLOCK_NETHER_SPROUTS_BREAK: BLOCK_NETHER_SPROUTS_BREAK
-BLOCK_NETHER_SPROUTS_FALL: BLOCK_NETHER_SPROUTS_FALL
-BLOCK_NETHER_SPROUTS_HIT: BLOCK_NETHER_SPROUTS_HIT
-BLOCK_NETHER_SPROUTS_PLACE: BLOCK_NETHER_SPROUTS_PLACE
-BLOCK_NETHER_SPROUTS_STEP: BLOCK_NETHER_SPROUTS_STEP
-BLOCK_NYLIUM_BREAK: BLOCK_NYLIUM_BREAK
-BLOCK_NYLIUM_FALL: BLOCK_NYLIUM_FALL
-BLOCK_NYLIUM_HIT: BLOCK_NYLIUM_HIT
-BLOCK_NYLIUM_PLACE: BLOCK_NYLIUM_PLACE
-BLOCK_NYLIUM_STEP: BLOCK_NYLIUM_STEP
-BLOCK_RESPAWN_ANCHOR_AMBIENT: BLOCK_RESPAWN_ANCHOR_AMBIENT
-BLOCK_RESPAWN_ANCHOR_CHARGE: BLOCK_RESPAWN_ANCHOR_CHARGE
-BLOCK_RESPAWN_ANCHOR_DEPLETE: BLOCK_RESPAWN_ANCHOR_DEPLETE
-BLOCK_RESPAWN_ANCHOR_SET_SPAWN: BLOCK_RESPAWN_ANCHOR_SET_SPAWN
-BLOCK_ROOTS_BREAK: BLOCK_ROOTS_BREAK
-BLOCK_ROOTS_FALL: BLOCK_ROOTS_FALL
-BLOCK_ROOTS_HIT: BLOCK_ROOTS_HIT
-BLOCK_ROOTS_PLACE: BLOCK_ROOTS_PLACE
-BLOCK_ROOTS_STEP: BLOCK_ROOTS_STEP
-BLOCK_SHROOMLIGHT_BREAK: BLOCK_SHROOMLIGHT_BREAK
-BLOCK_SHROOMLIGHT_FALL: BLOCK_SHROOMLIGHT_FALL
-BLOCK_SHROOMLIGHT_HIT: BLOCK_SHROOMLIGHT_HIT
-BLOCK_SHROOMLIGHT_PLACE: BLOCK_SHROOMLIGHT_PLACE
-BLOCK_SHROOMLIGHT_STEP: BLOCK_SHROOMLIGHT_STEP
-BLOCK_SMITHING_TABLE_USE: BLOCK_SMITHING_TABLE_USE
-BLOCK_SOUL_SOIL_BREAK: BLOCK_SOUL_SOIL_BREAK
-BLOCK_SOUL_SOIL_FALL: BLOCK_SOUL_SOIL_FALL
-BLOCK_SOUL_SOIL_HIT: BLOCK_SOUL_SOIL_HIT
-BLOCK_SOUL_SOIL_PLACE: BLOCK_SOUL_SOIL_PLACE
-BLOCK_SOUL_SOIL_STEP: BLOCK_SOUL_SOIL_STEP
-BLOCK_WART_BLOCK_BREAK: BLOCK_WART_BLOCK_BREAK
-BLOCK_WART_BLOCK_FALL: BLOCK_WART_BLOCK_FALL
-BLOCK_WART_BLOCK_HIT: BLOCK_WART_BLOCK_HIT
-BLOCK_WART_BLOCK_PLACE: BLOCK_WART_BLOCK_PLACE
-BLOCK_WART_BLOCK_STEP: BLOCK_WART_BLOCK_STEP
-BLOCK_WEEPING_VINES_BREAK: BLOCK_WEEPING_VINES_BREAK
-BLOCK_WEEPING_VINES_FALL: BLOCK_WEEPING_VINES_FALL
-BLOCK_WEEPING_VINES_HIT: BLOCK_WEEPING_VINES_HIT
-BLOCK_WEEPING_VINES_PLACE: BLOCK_WEEPING_VINES_PLACE
-BLOCK_WEEPING_VINES_STEP: BLOCK_WEEPING_VINES_STEP
-ENTITY_HOGLIN_AMBIENT: ENTITY_HOGLIN_AMBIENT
-ENTITY_HOGLIN_ANGRY: ENTITY_HOGLIN_ANGRY
-ENTITY_HOGLIN_ATTACK: ENTITY_HOGLIN_ATTACK
-ENTITY_HOGLIN_CONVERTED_TO_ZOMBIFIED: ENTITY_HOGLIN_CONVERTED_TO_ZOMBIFIED
-ENTITY_HOGLIN_DEATH: ENTITY_HOGLIN_DEATH
-ENTITY_HOGLIN_HURT: ENTITY_HOGLIN_HURT
-ENTITY_HOGLIN_RETREAT: ENTITY_HOGLIN_RETREAT
-ENTITY_HOGLIN_STEP: ENTITY_HOGLIN_STEP
-ENTITY_PIGLIN_ADMIRING_ITEM: ENTITY_PIGLIN_ADMIRING_ITEM
-ENTITY_PIGLIN_AMBIENT: ENTITY_PIGLIN_AMBIENT
-ENTITY_PIGLIN_ANGRY: ENTITY_PIGLIN_ANGRY
-ENTITY_PIGLIN_CELEBRATE: ENTITY_PIGLIN_CELEBRATE
-ENTITY_PIGLIN_CONVERTED_TO_ZOMBIFIED: ENTITY_PIGLIN_CONVERTED_TO_ZOMBIFIED
-ENTITY_PIGLIN_DEATH: ENTITY_PIGLIN_DEATH
-ENTITY_PIGLIN_HURT: ENTITY_PIGLIN_HURT
-ENTITY_PIGLIN_JEALOUS: ENTITY_PIGLIN_JEALOUS
-ENTITY_PIGLIN_RETREAT: ENTITY_PIGLIN_RETREAT
-ENTITY_PIGLIN_STEP: ENTITY_PIGLIN_STEP
-ENTITY_STRIDER_AMBIENT: ENTITY_STRIDER_AMBIENT
-ENTITY_STRIDER_DEATH: ENTITY_STRIDER_DEATH
-ENTITY_STRIDER_EAT: ENTITY_STRIDER_EAT
-ENTITY_STRIDER_HAPPY: ENTITY_STRIDER_HAPPY
-ENTITY_STRIDER_HURT: ENTITY_STRIDER_HURT
-ENTITY_STRIDER_RETREAT: ENTITY_STRIDER_RETREAT
-ENTITY_STRIDER_SADDLE: ENTITY_STRIDER_SADDLE
-ENTITY_STRIDER_STEP: ENTITY_STRIDER_STEP
-ENTITY_STRIDER_STEP_LAVA: ENTITY_STRIDER_STEP_LAVA
-ENTITY_ZOGLIN_AMBIENT: ENTITY_ZOGLIN_AMBIENT
-ENTITY_ZOGLIN_ANGRY: ENTITY_ZOGLIN_ANGRY
-ENTITY_ZOGLIN_ATTACK: ENTITY_ZOGLIN_ATTACK
-ENTITY_ZOGLIN_DEATH: ENTITY_ZOGLIN_DEATH
-ENTITY_ZOGLIN_HURT: ENTITY_ZOGLIN_HURT
-ENTITY_ZOGLIN_STEP: ENTITY_ZOGLIN_STEP
-ITEM_ARMOR_EQUIP_NETHERITE: ITEM_ARMOR_EQUIP_NETHERITE
-ITEM_LODESTONE_COMPASS_LOCK: ITEM_LODESTONE_COMPASS_LOCK
-MUSIC_NETHER_BASALT_DELTAS: MUSIC_NETHER_BASALT_DELTAS
-MUSIC_NETHER_CRIMSON_FOREST: MUSIC_NETHER_CRIMSON_FOREST
-MUSIC_NETHER_NETHER_WASTES: MUSIC_NETHER_NETHER_WASTES
-MUSIC_NETHER_SOUL_SAND_VALLEY: MUSIC_NETHER_SOUL_SAND_VALLEY
-MUSIC_NETHER_WARPED_FOREST: MUSIC_NETHER_WARPED_FOREST
-PARTICLE_SOUL_ESCAPE: PARTICLE_SOUL_ESCAPE
+ambiant.basalt_deltas.additions: AMBIENT_BASALT_DELTAS_ADDITIONS
+ambiant.basalt_deltas.loop: AMBIENT_BASALT_DELTAS_LOOP
+ambiant.basalt_deltas.mood: AMBIENT_BASALT_DELTAS_MOOD
+ambiant.crimson_forest.additions: AMBIENT_CRIMSON_FOREST_ADDITIONS
+ambiant.crimson_forest.loop: AMBIENT_CRIMSON_FOREST_LOOP
+ambiant.crimson_forest.mood: AMBIENT_CRIMSON_FOREST_MOOD
+ambiant.nether_wastes.additions: AMBIENT_NETHER_WASTES_ADDITIONS
+ambiant.nether_wastes.loop: AMBIENT_NETHER_WASTES_LOOP
+ambiant.nether_wastes.mood: AMBIENT_NETHER_WASTES_MOOD
+ambiant.soul_sand_valley.additions: AMBIENT_SOUL_SAND_VALLEY_ADDITIONS
+ambiant.soul_sand_valley.loop: AMBIENT_SOUL_SAND_VALLEY_LOOP
+ambiant.soul_sand_valley.mood: AMBIENT_SOUL_SAND_VALLEY_MOOD
+ambiant.warped_fores.additions: AMBIENT_WARPED_FOREST_ADDITIONS
+ambiant.warped_forest.loop: AMBIENT_WARPED_FOREST_LOOP
+ambiant.warped_forest.mood: AMBIENT_WARPED_FOREST_MOOD
+block.ancient_debris.break: BLOCK_ANCIENT_DEBRIS_BREAK
+block.ancient_debris.fall: BLOCK_ANCIENT_DEBRIS_FALL
+block.ancient_debris.hit: BLOCK_ANCIENT_DEBRIS_HIT
+block.ancient_debris.place: BLOCK_ANCIENT_DEBRIS_PLACE
+block.ancient_debris.step: BLOCK_ANCIENT_DEBRIS_STEP
+block.basalt.break: BLOCK_BASALT_BREAK
+block.basalt.fall: BLOCK_BASALT_FALL
+block.basalt.hit: BLOCK_BASALT_HIT
+block.basalt.place: BLOCK_BASALT_PLACE
+block.basalt.step: BLOCK_BASALT_STEP
+block.chain.break: BLOCK_CHAIN_BREAK
+block.chain.fall: BLOCK_CHAIN_FALL
+block.chain.hit: BLOCK_CHAIN_HIT
+block.chain.place: BLOCK_CHAIN_PLACE
+block.chain.step: BLOCK_CHAIN_STEP
+block.fungus.break: BLOCK_FUNGUS_BREAK
+block.fungus.fall: BLOCK_FUNGUS_FALL
+block.fungus.hit: BLOCK_FUNGUS_HIT
+block.fungus.place: BLOCK_FUNGUS_PLACE
+block.fungus.step: BLOCK_FUNGUS_STEP
+block.gilded_blackstone.break: BLOCK_GILDED_BLACKSTONE_BREAK
+block.gilded_blackstone.fall: BLOCK_GILDED_BLACKSTONE_FALL
+block.gilded_blackstone.hit: BLOCK_GILDED_BLACKSTONE_HIT
+block.gilded_blackstone.place: BLOCK_GILDED_BLACKSTONE_PLACE
+block.gilded_blackstone.step: BLOCK_GILDED_BLACKSTONE_STEP
+block.lodestone.break: BLOCK_LODESTONE_BREAK
+block.lodestone.fall: BLOCK_LODESTONE_FALL
+block.lodestone.hit: BLOCK_LODESTONE_HIT
+block.lodestone.place: BLOCK_LODESTONE_PLACE
+block.lodestone.step: BLOCK_LODESTONE_STEP
+block.netherite_block.break: BLOCK_NETHERITE_BLOCK_BREAK
+block.netherite_block.fall: BLOCK_NETHERITE_BLOCK_FALL
+block.netherite_block.hit: BLOCK_NETHERITE_BLOCK_HIT
+block.netherite_block.place: BLOCK_NETHERITE_BLOCK_PLACE
+block.netherite_block.step: BLOCK_NETHERITE_BLOCK_STEP
+block.nether_gold_ore.break: BLOCK_NETHER_GOLD_ORE_BREAK
+block.nether_gold_ore.fall: BLOCK_NETHER_GOLD_ORE_FALL
+block.nether_gold_ore.hit: BLOCK_NETHER_GOLD_ORE_HIT
+block.nether_gold_ore.place: BLOCK_NETHER_GOLD_ORE_PLACE
+block.nether_gold_ore.step: BLOCK_NETHER_GOLD_ORE_STEP
+block.nether_ore.break: BLOCK_NETHER_ORE_BREAK
+block.nether_ore.fall: BLOCK_NETHER_ORE_FALL
+block.nether_ore.hit: BLOCK_NETHER_ORE_HIT
+block.nether_ore.place: BLOCK_NETHER_ORE_PLACE
+block.nether_ore.step: BLOCK_NETHER_ORE_STEP
+block.nether_sprouts.break: BLOCK_NETHER_SPROUTS_BREAK
+block.nether_sprouts.fall: BLOCK_NETHER_SPROUTS_FALL
+block.nether_sprouts.hit: BLOCK_NETHER_SPROUTS_HIT
+block.nether_sprouts.palce: BLOCK_NETHER_SPROUTS_PLACE
+block.nether_sprouts.step: BLOCK_NETHER_SPROUTS_STEP
+block.nylium.break: BLOCK_NYLIUM_BREAK
+block.nylium.fall: BLOCK_NYLIUM_FALL
+block.nylium_hit: BLOCK_NYLIUM_HIT
+block.nylium.place: BLOCK_NYLIUM_PLACE
+block.nylium.step: BLOCK_NYLIUM_STEP
+block.respawn_anchor.ambient: BLOCK_RESPAWN_ANCHOR_AMBIENT
+block.respawn_anchor.charge: BLOCK_RESPAWN_ANCHOR_CHARGE
+block.respawn_anchor.deplete: BLOCK_RESPAWN_ANCHOR_DEPLETE
+block.respawn_anchor.set_spawn: BLOCK_RESPAWN_ANCHOR_SET_SPAWN
+block.roots.break: BLOCK_ROOTS_BREAK
+block.roots.fall: BLOCK_ROOTS_FALL
+block.roots.hit: BLOCK_ROOTS_HIT
+block.roots.place: BLOCK_ROOTS_PLACE
+block.roots.step: BLOCK_ROOTS_STEP
+block.shroomlight.break: BLOCK_SHROOMLIGHT_BREAK
+block.shroomlight.fall: BLOCK_SHROOMLIGHT_FALL
+block.shroomlight.hit: BLOCK_SHROOMLIGHT_HIT
+block.shroomlight.place: BLOCK_SHROOMLIGHT_PLACE
+block.shroomlight.step: BLOCK_SHROOMLIGHT_STEP
+block.smithing_table.use: BLOCK_SMITHING_TABLE_USE
+block.soul_soil.break: BLOCK_SOUL_SOIL_BREAK
+block.soul_soil.fall: BLOCK_SOUL_SOIL_FALL
+block.soul_soil.hit: BLOCK_SOUL_SOIL_HIT
+block.soul_soil.place: BLOCK_SOUL_SOIL_PLACE
+block.soul_soil.step: BLOCK_SOUL_SOIL_STEP
+block.wart_block.break: BLOCK_WART_BLOCK_BREAK
+block.wart_block.fall: BLOCK_WART_BLOCK_FALL
+block.wart_block.hit: BLOCK_WART_BLOCK_HIT
+block.wart_block.place: BLOCK_WART_BLOCK_PLACE
+block.wart_block.step: BLOCK_WART_BLOCK_STEP
+block.weeping_vines.break: BLOCK_WEEPING_VINES_BREAK
+block.weeping_vines.fall: BLOCK_WEEPING_VINES_FALL
+block.weeping_vines.hit: BLOCK_WEEPING_VINES_HIT
+block.weeping_vines.place: BLOCK_WEEPING_VINES_PLACE
+block.weeping_vines.step: BLOCK_WEEPING_VINES_STEP
+entity.hoglin.ambient: ENTITY_HOGLIN_AMBIENT
+entity.hoglin.angry: ENTITY_HOGLIN_ANGRY
+entity.hoglin.attack: ENTITY_HOGLIN_ATTACK
+entity.hoglin.converted_to_zombified: ENTITY_HOGLIN_CONVERTED_TO_ZOMBIFIED
+entity.hoglin.death: ENTITY_HOGLIN_DEATH
+entity.hoglin.hurt: ENTITY_HOGLIN_HURT
+entity.hoglin.retreat: ENTITY_HOGLIN_RETREAT
+entity.hoglin.step: ENTITY_HOGLIN_STEP
+entity.piglin.admiring_item: ENTITY_PIGLIN_ADMIRING_ITEM
+entity.piglin.ambient: ENTITY_PIGLIN_AMBIENT
+entity.piglin.angry: ENTITY_PIGLIN_ANGRY
+entity.piglin.celebrate: ENTITY_PIGLIN_CELEBRATE
+entity.piglin.converted_to_zombified: ENTITY_PIGLIN_CONVERTED_TO_ZOMBIFIED
+entity.piglin.death: ENTITY_PIGLIN_DEATH
+entity.piglin.hurt: ENTITY_PIGLIN_HURT
+entity.piglin.jealous: ENTITY_PIGLIN_JEALOUS
+entity.piglin.retreat: ENTITY_PIGLIN_RETREAT
+entity.piglin.step: ENTITY_PIGLIN_STEP
+entity.strider.ambient: ENTITY_STRIDER_AMBIENT
+entity.strider.death: ENTITY_STRIDER_DEATH
+entity.strider.eat: ENTITY_STRIDER_EAT
+entity.strider.happy: ENTITY_STRIDER_HAPPY
+entity.stridder.hurt: ENTITY_STRIDER_HURT
+entity.strider.retreat: ENTITY_STRIDER_RETREAT
+entity.strider.saddle: ENTITY_STRIDER_SADDLE
+entity.strider.step: ENTITY_STRIDER_STEP
+entity.strider.step_lava: ENTITY_STRIDER_STEP_LAVA
+entity.zoglin.ambient: ENTITY_ZOGLIN_AMBIENT
+entity.zoglin.angry: ENTITY_ZOGLIN_ANGRY
+entity.zoglin.attack: ENTITY_ZOGLIN_ATTACK
+entity.zoglin.death: ENTITY_ZOGLIN_DEATH
+entity.zoglin.hurt: ENTITY_ZOGLIN_HURT
+entity.zoglin.step: ENTITY_ZOGLIN_STEP
+item.armor.equip_netherite: ITEM_ARMOR_EQUIP_NETHERITE
+item.lodestone_compass.lock: ITEM_LODESTONE_COMPASS_LOCK
+music.nether.basalt_deltas: MUSIC_NETHER_BASALT_DELTAS
+music.nether.crimson_forest: MUSIC_NETHER_CRIMSON_FOREST
+music.nether.nether_wastes: MUSIC_NETHER_NETHER_WASTES
+music.nether.soul_sand_valley: MUSIC_NETHER_SOUL_SAND_VALLEY
+music.nether.warped_forest: MUSIC_NETHER_WARPED_FOREST
+particle.soul_escape: PARTICLE_SOUL_ESCAPE
 entity.piglin_brute.ambient: ENTITY_PIGLIN_BRUTE_AMBIENT
 entity.piglin_brute.angry: ENTITY_PIGLIN_BRUTE_ANGRY
 entity.piglin_brute.death: ENTITY_PIGLIN_BRUTE_DEATH
