--- a/src/datalists/sounds.yaml
+++ b/src/datalists/sounds.yaml
@@ -1,143 +1,144 @@
-- AMBIENT_BASALT_DELTAS_ADDITIONS
-- AMBIENT_BASALT_DELTAS_LOOP
-- AMBIENT_BASALT_DELTAS_MOOD
-- AMBIENT_CRIMSON_FOREST_ADDITIONS
-- AMBIENT_CRIMSON_FOREST_LOOP
-- AMBIENT_CRIMSON_FOREST_MOOD
-- AMBIENT_NETHER_WASTES_ADDITIONS
-- AMBIENT_NETHER_WASTES_LOOP
-- AMBIENT_NETHER_WASTES_MOOD
-- AMBIENT_SOUL_SAND_VALLEY_ADDITIONS
-- AMBIENT_SOUL_SAND_VALLEY_LOOP
-- AMBIENT_SOUL_SAND_VALLEY_MOOD
-- AMBIENT_WARPED_FOREST_ADDITIONS
-- AMBIENT_WARPED_FOREST_LOOP
-- AMBIENT_WARPED_FOREST_MOOD
-- BLOCK_ANCIENT_DEBRIS_BREAK
-- BLOCK_ANCIENT_DEBRIS_FALL
-- BLOCK_ANCIENT_DEBRIS_HIT
-- BLOCK_ANCIENT_DEBRIS_PLACE
-- BLOCK_ANCIENT_DEBRIS_STEP
-- BLOCK_BASALT_BREAK
-- BLOCK_BASALT_FALL
-- BLOCK_BASALT_HIT
-- BLOCK_BASALT_PLACE
-- BLOCK_BASALT_STEP
-- BLOCK_CHAIN_BREAK
-- BLOCK_CHAIN_FALL
-- BLOCK_CHAIN_HIT
-- BLOCK_CHAIN_PLACE
-- BLOCK_FUNGUS_BREAK
-- BLOCK_FUNGUS_FALL
-- BLOCK_FUNGUS_HIT
-- BLOCK_FUNGUS_PLACE
-- BLOCK_FUNGUS_STEP
-- BLOCK_GILDED_BLACKSTONE_BREAK
-- BLOCK_GILDED_BLACKSTONE_FALL
-- BLOCK_GILDED_BLACKSTONE_HIT
-- BLOCK_GILDED_BLACKSTONE_PLACE
-- BLOCK_GILDED_BLACKSTONE_STEP
-- BLOCK_LODESTONE_BREAK
-- BLOCK_LODESTONE_FALL
-- BLOCK_LODESTONE_HIT
-- BLOCK_LODESTONE_PLACE
-- BLOCK_LODESTONE_STEP
-- BLOCK_NETHERITE_BLOCK_BREAK
-- BLOCK_NETHERITE_BLOCK_FALL
-- BLOCK_NETHERITE_BLOCK_HIT
-- BLOCK_NETHERITE_BLOCK_PLACE
-- BLOCK_NETHERITE_BLOCK_STEP
-- BLOCK_NETHER_GOLD_ORE_BREAK
-- BLOCK_NETHER_GOLD_ORE_FALL
-- BLOCK_NETHER_GOLD_ORE_HIT
-- BLOCK_NETHER_GOLD_ORE_PLACE
-- BLOCK_NETHER_GOLD_ORE_STEP
-- BLOCK_NETHER_ORE_BREAK
-- BLOCK_NETHER_ORE_FALL
-- BLOCK_NETHER_ORE_HIT
-- BLOCK_NETHER_ORE_PLACE
-- BLOCK_NETHER_ORE_STEP
-- BLOCK_NETHER_SPROUTS_BREAK
-- BLOCK_NETHER_SPROUTS_FALL
-- BLOCK_NETHER_SPROUTS_HIT
-- BLOCK_NETHER_SPROUTS_PLACE
-- BLOCK_NETHER_SPROUTS_STEP
-- BLOCK_NYLIUM_BREAK
-- BLOCK_NYLIUM_FALL
-- BLOCK_NYLIUM_HIT
-- BLOCK_NYLIUM_PLACE
-- BLOCK_NYLIUM_STEP
-- BLOCK_RESPAWN_ANCHOR_AMBIENT
-- BLOCK_RESPAWN_ANCHOR_CHARGE
-- BLOCK_RESPAWN_ANCHOR_DEPLETE
-- BLOCK_RESPAWN_ANCHOR_SET_SPAWN
-- BLOCK_ROOTS_BREAK
-- BLOCK_ROOTS_FALL
-- BLOCK_ROOTS_HIT
-- BLOCK_ROOTS_PLACE
-- BLOCK_ROOTS_STEP
-- BLOCK_SHROOMLIGHT_BREAK
-- BLOCK_SHROOMLIGHT_FALL
-- BLOCK_SHROOMLIGHT_HIT
-- BLOCK_SHROOMLIGHT_PLACE
-- BLOCK_SHROOMLIGHT_STEP
-- BLOCK_SMITHING_TABLE_USE
-- BLOCK_SOUL_SOIL_BREAK
-- BLOCK_SOUL_SOIL_FALL
-- BLOCK_SOUL_SOIL_HIT
-- BLOCK_SOUL_SOIL_PLACE
-- BLOCK_SOUL_SOIL_STEP
-- BLOCK_WART_BLOCK_BREAK
-- BLOCK_WART_BLOCK_FALL
-- BLOCK_WART_BLOCK_HIT
-- BLOCK_WART_BLOCK_PLACE
-- BLOCK_WART_BLOCK_STEP
-- BLOCK_WEEPING_VINES_BREAK
-- BLOCK_WEEPING_VINES_FALL
-- BLOCK_WEEPING_VINES_HIT
-- BLOCK_WEEPING_VINES_PLACE
-- BLOCK_WEEPING_VINES_STEP
-- ENTITY_HOGLIN_AMBIENT
-- ENTITY_HOGLIN_ANGRY
-- ENTITY_HOGLIN_ATTACK
-- ENTITY_HOGLIN_CONVERTED_TO_ZOMBIFIED
-- ENTITY_HOGLIN_DEATH
-- ENTITY_HOGLIN_HURT
-- ENTITY_HOGLIN_RETREAT
-- ENTITY_HOGLIN_STEP
-- ENTITY_PIGLIN_ADMIRING_ITEM
-- ENTITY_PIGLIN_AMBIENT
-- ENTITY_PIGLIN_ANGRY
-- ENTITY_PIGLIN_CELEBRATE
-- ENTITY_PIGLIN_CONVERTED_TO_ZOMBIFIED
-- ENTITY_PIGLIN_DEATH
-- ENTITY_PIGLIN_HURT
-- ENTITY_PIGLIN_JEALOUS
-- ENTITY_PIGLIN_RETREAT
-- ENTITY_PIGLIN_STEP
-- ENTITY_STRIDER_AMBIENT
-- ENTITY_STRIDER_DEATH
-- ENTITY_STRIDER_EAT
-- ENTITY_STRIDER_HAPPY
-- ENTITY_STRIDER_HURT
-- ENTITY_STRIDER_RETREAT
-- ENTITY_STRIDER_SADDLE
-- ENTITY_STRIDER_STEP
-- ENTITY_STRIDER_STEP_LAVA
-- ENTITY_ZOGLIN_AMBIENT
-- ENTITY_ZOGLIN_ANGRY
-- ENTITY_ZOGLIN_ATTACK
-- ENTITY_ZOGLIN_DEATH
-- ENTITY_ZOGLIN_HURT
-- ENTITY_ZOGLIN_STEP
-- ITEM_ARMOR_EQUIP_NETHERITE
-- ITEM_LODESTONE_COMPASS_LOCK
-- MUSIC_NETHER_BASALT_DELTAS
-- MUSIC_NETHER_CRIMSON_FOREST
-- MUSIC_NETHER_NETHER_WASTES
-- MUSIC_NETHER_SOUL_SAND_VALLEY
-- MUSIC_NETHER_WARPED_FOREST
-- PARTICLE_SOUL_ESCAPE
+- ambiant.basalt_deltas.additions
+- ambiant.basalt_deltas.loop
+- ambiant.basalt_deltas.mood
+- ambiant.crimson_forest.additions
+- ambiant.crimson_forest.loop
+- ambiant.crimson_forest.mood
+- ambiant.nether_wastes.additions
+- ambiant.nether_wastes.loop
+- ambiant.nether_wastes.mood
+- ambiant.soul_sand_valley.additions
+- ambiant.soul_sand_valley.loop
+- ambiant.soul_sand_valley.mood
+- ambiant.warped_fores.additions
+- ambiant.warped_forest.loop
+- ambiant.warped_forest.mood
+- block.ancient_debris.break
+- block.ancient_debris.fall
+- block.ancient_debris.hit
+- block.ancient_debris.place
+- block.ancient_debris.step
+- block.basalt.break
+- block.basalt.fall
+- block.basalt.hit
+- block.basalt.place
+- block.basalt.step
+- block.chain.break
+- block.chain.fall
+- block.chain.hit
+- block.chain.place
+- block.chain.step
+- block.fungus.break
+- block.fungus.fall
+- block.fungus.hit
+- block.fungus.place
+- block.fungus.step
+- block.gilded_blackstone.break
+- block.gilded_blackstone.fall
+- block.gilded_blackstone.hit
+- block.gilded_blackstone.place
+- block.gilded_blackstone.step
+- block.lodestone.break
+- block.lodestone.fall
+- block.lodestone.hit
+- block.lodestone.place
+- block.lodestone.step
+- block.netherite_block.break
+- block.netherite_block.fall
+- block.netherite_block.hit
+- block.netherite_block.place
+- block.netherite_block.step
+- block.nether_gold_ore.break
+- block.nether_gold_ore.fall
+- block.nether_gold_ore.hit
+- block.nether_gold_ore.place
+- block.nether_gold_ore.step
+- block.nether_ore.break
+- block.nether_ore.fall
+- block.nether_ore.hit
+- block.nether_ore.place
+- block.nether_ore.step
+- block.nether_sprouts.break
+- block.nether_sprouts.fall
+- block.nether_sprouts.hit
+- block.nether_sprouts.place
+- block.nether_sprouts.step
+- block.nylium.break
+- block.nylium.fall
+- block.nylium_hit
+- block.nylium.place
+- block.nylium.step
+- block.respawn_anchor.ambient
+- block.respawn_anchor.charge
+- block.respawn_anchor.deplete
+- block.respawn_anchor.set_spawn
+- block.roots.break
+- block.roots.fall
+- block.roots.hit
+- block.roots.place
+- block.roots.step
+- block.shroomlight.break
+- block.shroomlight.fall
+- block.shroomlight.hit
+- block.shroomlight.place
+- block.shroomlight.step
+- block.smithing_table.use
+- block.soul_soil.break
+- block.soul_soil.fall
+- block.soul_soil.hit
+- block.soul_soil.place
+- block.soul_soil.step
+- block.wart_block.break
+- block.wart_block.fall
+- block.wart_block.hit
+- block.wart_block.place
+- block.wart_block.step
+- block.weeping_vines.break
+- block.weeping_vines.fall
+- block.weeping_vines.hit
+- block.weeping_vines.place
+- block.weeping_vines.step
+- entity.hoglin.ambient
+- entity.hoglin.angry
+- entity.hoglin.attack
+- entity.hoglin.converted_to_zombified
+- entity.hoglin.death
+- entity.hoglin.hurt
+- entity.hoglin.retreat
+- entity.hoglin.step
+- entity.piglin.admiring_item
+- entity.piglin.ambient
+- entity.piglin.angry
+- entity.piglin.celebrate
+- entity.piglin.converted_to_zombified
+- entity.piglin.death
+- entity.piglin.hurt
+- entity.piglin.jealous
+- entity.piglin.retreat
+- entity.piglin.step
+- entity.strider.ambient
+- entity.strider.death
+- entity.strider.eat
+- entity.strider.happy
+- entity.stridder.hurt
+- entity.strider.retreat
+- entity.strider.saddle
+- entity.strider.step
+- entity.strider.step_lava
+- entity.zoglin.ambient
+- entity.zoglin.angry
+- entity.zoglin.attack
+- entity.zoglin.death
+- entity.zoglin.hurt
+- entity.zoglin.step
+- item.armor.equip_netherite
+- item.lodestone_compass.lock
+- music.nether.basalt_deltas
+- music.nether.crimson_forest
+- music.nether.nether_wastes
+- music.nether.soul_sand_valley
+- music.nether.warped_forest
+- particle.soul_escape
 - entity.piglin_brute.ambient
 - entity.piglin_brute.angry
 - entity.piglin_brute.death
