--- a/src/datalists/stepsounds.yaml
+++ b/src/datalists/stepsounds.yaml
@@ -1,38 +1,38 @@
-NETHER_STEM:
+- NETHER_STEM:
   texture: CRIMSON_STEM
-NYLIUM:
+- NYLIUM:
   texture: CRIMSON_NYLIUM
-FUNGUS:
+- FUNGUS:
   texture: CRIMSON_FUNGUS
-SHROOMLIGHT:
+- SHROOMLIGHT:
   texture: SHROOMLIGHT
-WEEPING_VINES:
+- WEEPING_VINES:
   texture: WEEPING_VINES
-SOUL_SAND:
+- SOUL_SAND:
   texture: SOUL_SAND
-SOUL_SOIL:
+- SOUL_SOIL:
   texture: SOUL_SOIL
-BASALT:
+- BASALT:
   texture: BASALT
-WART_BLOCK:
+- WART_BLOCK:
   texture: NETHER_WART_BLOCK
-NETHERRACK:
+- NETHERRACK:
   texture: NETHERRACK
-NETHER_BRICKS:
+- NETHER_BRICKS:
   texture: NETHER_BRICKS
-NETHER_SPROUTS:
+- NETHER_SPROUTS:
   texture: NETHER_SPROUTS
-BONE:
+- BONE:
   texture: BONE_BLOCK
-NETHERITE:
+- NETHERITE:
   texture: NETHERITE_BLOCK
-ANCIENT_DEBRIS:
+- ANCIENT_DEBRIS:
   texture: ANCIENT_DEBRIS
-LODESTONE:
+- LODESTONE:
   texture: LODESTONE
-CHAIN:
+- CHAIN:
   texture: CHAIN
-NETHER_GOLD_ORE:
+- NETHER_GOLD_ORE:
   texture: NETHER_GOLD_ORE
-GILDED_BLACKSTONE:
+- GILDED_BLACKSTONE:
   texture: GILDED_BLACKSTONE
