Fixed some mappings
 Changes to be committed:
	modified:   src/fabric-1.16.2/mappings/mobspawntypes.yaml
	modified:   src/fabric-1.16.2/templates/biome.java.ftl

--- a/src/fabric-1.16.2/mappings/mobspawntypes.yaml
+++ b/src/fabric-1.16.2/mappings/mobspawntypes.yaml
@@ -1,6 +1,7 @@
-_default: EntityClassification.MONSTER
-monster: EntityClassification.MONSTER
-creature: EntityClassification.CREATURE
-ambient: EntityClassification.AMBIENT
-waterCreature: EntityClassification.AQUATIC
-misc: EntityClassification.MISC
+_default: SpawnGroup.MONSTER
+monster: SpawnGroup.MONSTER
+creature: SpawnGroup.CREATURE
+ambient: SpawnGroup.AMBIENT
+waterCreature: SpawnGroup.WATER_CREATURE
+waterAmbient: SpawnGroup.WATER_AMBIENT
+misc: SpawnGroup.MISC
