Fixed more mappings
 Changes to be committed:
	modified:   src/fabric-1.16.2/mappings/biomes.yaml
	modified:   src/fabric-1.16.2/mappings/materials.yaml
	modified:   src/fabric-1.16.2/mappings/potions.yaml
	modified:   src/fabric-1.16.2/mappings/stepsounds.yaml

--- a/src/fabric-1.16.2/mappings/materials.yaml
+++ b/src/fabric-1.16.2/mappings/materials.yaml
@@ -20,7 +20,8 @@ REDSTONE_LIGHT: REDSTONE_LAMP
 TNT: TNT
 CORAL: CORAL
 ICE: ICE
-PACKED_ICE: PACKED_ICESNOW: SNOW
+PACKED_ICE: PACKED_ICE
+SNOW: SNOW
 CRAFTED_SNOW: SNOW_BLOCK
 CACTUS: CACTUS
 CLAY: CLAY
@@ -38,7 +39,6 @@ BAMBOO_SAPLING: BAMBOO_SAPLING
 BAMBOO: BAMBOO
 BARRIER: BARRIER
 PISTON: PISTON
-FIRE: FIRE
 PUMPKIN: PUMPKIN
 SOIL: SOUL_SOIL
 NETHER_WOOD: NETHER_WOOD
