--- a/src/fabric-1.16.2/mappings/potions.yaml
+++ b/src/fabric-1.16.2/mappings/potions.yaml
@@ -1,34 +1,34 @@
-_default: Effects.SPEED
+_default: StatusEffects.SPEED
 _mcreator_prefix: "CUSTOM:"
 _mcreator_map_template: "@NAMEPotion.potion"
-SPEED: Effects.SPEED
-SLOWNESS: Effects.SLOWNESS
-HASTE: Effects.HASTE
-MINING_FATIGUE: Effects.MINING_FATIGUE
-STRENGTH: Effects.STRENGTH
-INSTANT_HEALTH: Effects.INSTANT_HEALTH
-INSTANT_DAMAGE: Effects.INSTANT_DAMAGE
-JUMP_BOOST: Effects.JUMP_BOOST
-NAUSEA: Effects.NAUSEA
-REGENERATION: Effects.REGENERATION
-RESISTANCE: Effects.RESISTANCE
-FIRE_RESISTANCE: Effects.FIRE_RESISTANCE
-WATER_BREATHING: Effects.WATER_BREATHING
-INVISIBILITY: Effects.INVISIBILITY
-BLINDNESS: Effects.BLINDNESS
-NIGHT_VISION: Effects.NIGHT_VISION
-HUNGER: Effects.HUNGER
-WEAKNESS: Effects.WEAKNESS
-POISON: Effects.POISON
-WITHER: Effects.WITHER
-HEALTH_BOOST: Effects.HEALTH_BOOST
-ABSORPTION: Effects.ABSORPTION
-SATURATION: Effects.SATURATION
-GLOWING: Effects.GLOWING
-LEVITATION: Effects.LEVITATION
-LUCK: Effects.LUCK
-UNLUCK: Effects.UNLUCK
-SLOW_FALLING: Effects.SLOW_FALLING
-CONDUIT_POWER: Effects.CONDUIT_POWER
-DOLPHINS_GRACE: Effects.DOLPHINS_GRACE
-BAD_OMEN: Effects.BAD_OMEN
+SPEED: StatusEffects.SPEED
+SLOWNESS: StatusEffects.SLOWNESS
+HASTE: StatusEffects.HASTE
+MINING_FATIGUE: StatusEffects.MINING_FATIGUE
+STRENGTH: StatusEffects.STRENGTH
+INSTANT_HEALTH: StatusEffects.INSTANT_HEALTH
+INSTANT_DAMAGE: StatusEffects.INSTANT_DAMAGE
+JUMP_BOOST: StatusEffects.JUMP_BOOST
+NAUSEA: StatusEffects.NAUSEA
+REGENERATION: StatusEffects.REGENERATION
+RESISTANCE: StatusEffects.RESISTANCE
+FIRE_RESISTANCE: StatusEffects.FIRE_RESISTANCE
+WATER_BREATHING: StatusEffects.WATER_BREATHING
+INVISIBILITY: StatusEffects.INVISIBILITY
+BLINDNESS: StatusEffects.BLINDNESS
+NIGHT_VISION: StatusEffects.NIGHT_VISION
+HUNGER: StatusEffects.HUNGER
+WEAKNESS: StatusEffects.WEAKNESS
+POISON: StatusEffects.POISON
+WITHER: StatusEffects.WITHER
+HEALTH_BOOST: StatusEffects.HEALTH_BOOST
+ABSORPTION: StatusEffects.ABSORPTION
+SATURATION: StatusEffects.SATURATION
+GLOWING: StatusEffects.GLOWING
+LEVITATION: StatusEffects.LEVITATION
+LUCK: StatusEffects.LUCK
+UNLUCK: StatusEffects.UNLUCK
+SLOW_FALLING: StatusEffects.SLOW_FALLING
+CONDUIT_POWER: StatusEffects.CONDUIT_POWER
+DOLPHINS_GRACE: StatusEffects.DOLPHINS_GRACE
+BAD_OMEN: StatusEffects.BAD_OMEN
