--- a/src/fabric-1.16.3/workspacebase/build.gradle
+++ b/src/fabric-1.16.3/workspacebase/build.gradle
@@ -10,14 +10,16 @@ version = '1.0.0'
 group = 'com.yourname.modid'
 
 dependencies {
-	minecraft("com.mojang:minecraft:1.16.3-rc1")
-	mappings("net.fabricmc:yarn:1.16.3-rc1+build.1:v2")
-	modImplementation("net.fabricmc:fabric-loader:0.9.3+build.207")
+	minecraft("com.mojang:minecraft:1.16.3")
+    	mappings("net.fabricmc:yarn:1.16.3+build.1:v2")
+    	modImplementation("net.fabricmc:fabric-loader:0.9.3+build.207")
 
 	//Fabric api
 	modImplementation "net.fabricmc.fabric-api:fabric-api:0.20.1+build.401-1.16"
 
-	modImplementation("io.github.prospector:modmenu:1.14.6+build.31")
+	modImplementation("io.github.prospector:modmenu:1.14.6+build.31") {
+		exclude module: 'fabric-api'
+	}
 }
 
 processResources {
