--- a/src/fabric-1.16.3/workspacebase/build.gradle
+++ b/src/fabric-1.16.3/workspacebase/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     	modImplementation("net.fabricmc:fabric-loader:0.9.3+build.207")
 
 	//Fabric api
-	modImplementation "net.fabricmc.fabric-api:fabric-api:0.20.1+build.401-1.16"
+	modImplementation("net.fabricmc.fabric-api:fabric-api:0.20.2+build.402-1.16")
 
 	modImplementation("io.github.prospector:modmenu:1.14.6+build.31") {
 		exclude module: 'fabric-api'
