Mixins and accessors
 Changes to be committed:
	modified:   src/fabric-1.16.3/generator.yaml
	modified:   src/fabric-1.16.3/templates/biome.java.ftl
	new file:   src/fabric-1.16.3/templates/modbase/builtinbiomes.java.ftl
	modified:   src/fabric-1.16.3/templates/modbase/fabric.mod.json.ftl
	new file:   src/fabric-1.16.3/templates/modbase/mixins.json.ftl
	new file:   src/fabric-1.16.3/templates/modbase/setbasebiomelayers.java.ftl
	new file:   src/fabric-1.16.3/templates/modbase/vanillalayeredbiomesource.java.ftl

--- a/src/fabric-1.16.3/generator.yaml
+++ b/src/fabric-1.16.3/generator.yaml
@@ -25,9 +25,21 @@ base_templates:
 - template: modbase/mod.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/@JavaModName.java"
   canLock: true
+- template: modbase/builtinbiomes.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/mixin/BuiltinBiomesAccessor.java"
+  canLock: true
+- template: modbase/setbasebiomelayers.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/mixin/SetBaseBiomesLayerAccessor.java"
+  canLock: true
+- template: modbase/vanillalayeredbiomesource.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/mixin/VanillaLayeredBiomeSourceAccessor.java"
+  canLock: true
 - template: modbase/client.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/ClientInit.java"
   canLock: true
+- template: modbase/mixins.json.ftl
+  writer: json
+  name: "@RESROOT/modid.mixins.json"
 - template: modbase/listener.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/IListener.java"
   canLock: true
