--- a/src/fabric-1.17/workspacebase/build.gradle
+++ b/src/fabric-1.17/workspacebase/build.gradle
@@ -10,12 +10,12 @@ version = '1.0.0'
 group = 'com.yourname.modid'
 
 dependencies {
-	minecraft("com.mojang:minecraft:20w46a")
-	mappings("net.fabricmc:yarn:20w46a+build.23:v2")
-	modImplementation("net.fabricmc:fabric-loader:0.10.8")
+    	minecraft "com.mojang:minecraft:21w08a"
+    	mappings "net.fabricmc:yarn:21w08a+build.2:v2"
+    	modImplementation "net.fabricmc:fabric-loader:0.11.2"
 
-	//Fabric api
-	modImplementation("net.fabricmc.fabric-api:fabric-api:0.26.3+1.17")
+    	//Fabric api
+    	modImplementation "net.fabricmc.fabric-api:fabric-api:0.31.1+1.17"
 }
 
 processResources {
