--- a/src/fabric-1.17/potion.definition.yaml
+++ b/src/fabric-1.17/potion.definition.yaml
@@ -5,14 +5,14 @@ templates:
 localizationkeys:
   - key: effect.@modid.@registryname
     mapto: effectName
-  - key: item.minecraft.potion.effect.@registryname
+  - key: item.minecraft.potion.effect.@registryname_potion
     mapto: name
-  - key: item.minecraft.splash_potion.effect.@registryname
+  - key: item.minecraft.splash_potion.effect.@registryname_potion
     mapto: name
     prefix: "Splash "
-  - key: item.minecraft.tipped_arrow.effect.@registryname
+  - key: item.minecraft.tipped_arrow.effect.@registryname_potion
     mapto: name
     prefix: "Arrow of "
-  - key: item.minecraft.lingering_potion.effect.@registryname
+  - key: item.minecraft.lingering_potion.effect.@registryname_potion
     mapto: name
     prefix: "Lingering "
