Update map colors mappings

--- a/src/fabric-1.17/mappings/mapcolors.yaml
+++ b/src/fabric-1.17/mappings/mapcolors.yaml
@@ -1,26 +1,26 @@
 _default: DEFAULT
 DEFAULT: DEFAULT
 AIR: AIR
-GRASS: GRASS
-SAND: SAND
+GRASS: PALE_GREEN
+SAND: PALE_YELLOW
 CLOTH: WOOL
 TNT: TNT
-ICE: ICE
-IRON: IRON
-FOLIAGE: FOLIAGE
+ICE: PALE_PURPLE
+IRON: IRON_GRAY
+FOLIAGE: GREEN
 SNOW: SNOW
-CLAY: CLAY
-DIRT: DIRT
-STONE: STONE
-WATER: WATER
-WOOD: WOOD
-QUARTZ: QUARTZ
+CLAY: LIGHT_BLUE_GRAY
+DIRT: PALE_ORANGE_BROWN
+STONE: DIM_GRAY
+WATER: BRIGHT_BLUE
+WOOD: OAK_TAN
+QUARTZ: OFF_WHITE
 ADOBE: ADOBE
 MAGENTA: MAGENTA
 LIGHT_BLUE: LIGHT_BLUE
 YELLOW: YELLOW
 LIME: LIME
-PINK: PINK
+PINK: LIGHT_PINK
 GRAY: GRAY
 SILVER: LIGHT_GRAY
 CYAN: CYAN
@@ -31,25 +31,25 @@ GREEN: GREEN
 RED: RED
 BLACK: BLACK
 GOLD: GOLD
-DIAMOND: DIAMOND
-LAPIS: LAPIS
-EMERALD: EMERALD
+DIAMOND: DIAMOND_BLUE
+LAPIS: LAPIS_BLUE
+EMERALD: EMERALD_GREEN
 OBSIDIAN: OBSIDIAN
 NETHERRACK: NETHER
-WHITE_TERRACOTTA: WHITE_TERRACOTTA
-ORANGE_TERRACOTTA: ORANGE_TERRACOTTA
-MAGENTA_TERRACOTTA: MAGENTA_TERRACOTTA
-LIGHT_BLUE_TERRACOTTA: LIGHT_BLUE_TERRACOTTA
-YELLOW_TERRACOTTA: YELLOW_TERRACOTTA
-LIME_TERRACOTTA: LIME_TERRACOTTA
-PINK_TERRACOTTA: PINK_TERRACOTTA
-GRAY_TERRACOTTA: GRAY_TERRACOTTA
-LIGHT_GRAY_TERRACOTTA: LIGHT_GRAY_TERRACOTTA
-CYAN_TERRACOTTA: CYAN_TERRACOTTA
-PURPLE_TERRACOTTA: PURPLE_TERRACOTTA
-BLUE_TERRACOTTA: BLUE_TERRACOTTA
-BROWN_TERRACOTTA: BROWN_TERRACOTTA
-GREEN_TERRACOTTA: GREEN_TERRACOTTA
-RED_TERRACOTTA: RED_TERRACOTTA
-BLACK_TERRACOTTA: BLACK_TERRACOTTA
-SPRUCE: SPRUCE
+WHITE_TERRACOTTA: TERRACOTTA_WHITE
+ORANGE_TERRACOTTA: TERRACOTTA_ORANGE
+MAGENTA_TERRACOTTA: TERRACOTTA_MAGENTA
+LIGHT_BLUE_TERRACOTTA: TERRACOTTA_LIGHT_BLUE
+YELLOW_TERRACOTTA: TERRACOTTA_YELLOW
+LIME_TERRACOTTA: TERRACOTTA_LIME
+PINK_TERRACOTTA: TERRACOTTA_PINK
+GRAY_TERRACOTTA: TERRACOTTA_GRAY
+LIGHT_GRAY_TERRACOTTA: TERRACOTTA_LIGHT_GRAY
+CYAN_TERRACOTTA: TERRACOTTA_CYAN
+PURPLE_TERRACOTTA: TERRACOTTA_PURPLE
+BLUE_TERRACOTTA: TERRACOTTA_BLUE
+BROWN_TERRACOTTA: TERRACOTTA_BROWN
+GREEN_TERRACOTTA: TERRACOTTA_GREEN
+RED_TERRACOTTA: TERRACOTTA_RED
+BLACK_TERRACOTTA: TERRACOTTA_BLACK
+SPRUCE: SPRUCE_BROWN
