Fully updated map colors

--- a/src/fabric-1.17/mappings/mapcolors.yaml
+++ b/src/fabric-1.17/mappings/mapcolors.yaml
@@ -1,6 +1,6 @@
 _default: DEFAULT
 DEFAULT: DEFAULT
-AIR: AIR
+AIR: CLEAR
 GRASS: PALE_GREEN
 SAND: PALE_YELLOW
 CLOTH: WOOL
@@ -53,3 +53,10 @@ GREEN_TERRACOTTA: TERRACOTTA_GREEN
 RED_TERRACOTTA: TERRACOTTA_RED
 BLACK_TERRACOTTA: TERRACOTTA_BLACK
 SPRUCE: SPRUCE_BROWN
+CRIMSON_NYLIUM: DULL_RED
+CRIMSON_STEM: DULL_PINK
+CRIMSON_HYPHAE: DARK_CRIMSON
+WARPED_NYLIUM: TEAL
+WARPED_STEM: DARK_AQUA
+WARPED_HYPHAE: DARK_DULL_PINK
+WARPED_WART: BRIGHT_TEAL
