Changed NETHER to DARK_RED

--- a/src/fabric-1.17/mappings/mapcolors.yaml
+++ b/src/fabric-1.17/mappings/mapcolors.yaml
@@ -35,7 +35,7 @@ DIAMOND: DIAMOND_BLUE
 LAPIS: LAPIS_BLUE
 EMERALD: EMERALD_GREEN
 OBSIDIAN: OBSIDIAN
-NETHERRACK: NETHER
+NETHERRACK: DARK_RED
 WHITE_TERRACOTTA: TERRACOTTA_WHITE
 ORANGE_TERRACOTTA: TERRACOTTA_ORANGE
 MAGENTA_TERRACOTTA: TERRACOTTA_MAGENTA
