--- a/src/fabric-1.17/mappings/mapcolors.yaml
+++ b/src/fabric-1.17/mappings/mapcolors.yaml
@@ -20,7 +20,7 @@ MAGENTA: MAGENTA
 LIGHT_BLUE: LIGHT_BLUE
 YELLOW: YELLOW
 LIME: LIME
-PINK: LIGHT_PINK
+PINK: PINK
 GRAY: GRAY
 SILVER: LIGHT_GRAY
 CYAN: CYAN
