--- a/src/fabric-1.17/biome.definition.yaml
+++ b/src/fabric-1.17/biome.definition.yaml
@@ -1,3 +1,3 @@
 templates:
   - template: biome.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/world/@NAMEBiome.java"
+    name: "@SRCROOT/@BASEPACKAGEPATH/world/biomes/@NAMEBiome.java"
