--- a/src/fabric-1.17/generator.yaml
+++ b/src/fabric-1.17/generator.yaml
@@ -1,4 +1,4 @@
-name: Minecraft Fabric for 21w08b (@buildfileversion)
+name: Minecraft Fabric for 21w10a (@buildfileversion)
 basefeatures: [model_json]
 status: dev
 buildfileversion: 0.11.2
