--- a/src/fabric-1.17/dimension.definition.yaml
+++ b/src/fabric-1.17/dimension.definition.yaml
@@ -2,10 +2,18 @@ templates:
   - template: json/dimension/dimension_type.json.ftl
     writer: json
     name: "@MODDATAROOT/dimension_type/@registryname.json"
+  - template: json/dimension/noise_settings_overworld.json.ftl
+    writer: json
+    condition: "worldGenType %= Normal world gen"
+    name: "@MODDATAROOT/worldgen/noise_settings/@registryname.json"
   - template: json/dimension/dimension_overworld.json.ftl
     writer: json
     condition: "worldGenType %= Normal world gen"
     name: "@MODDATAROOT/dimension/@registryname.json"
+  - template: json/dimension/noise_settings_nether.json.ftl
+    writer: json
+    condition: "worldGenType %= Nether like gen"
+    name: "@MODDATAROOT/worldgen/noise_settings/@registryname.json"
   - template: json/dimension/dimension_nether.json.ftl
     writer: json
     condition: "worldGenType %= Nether like gen"
@@ -14,3 +22,7 @@ templates:
     writer: json
     condition: "worldGenType %= End like gen"
     name: "@MODDATAROOT/dimension/@registryname.json"
+  - template: json/dimension/noise_settings_end.json.ftl
+    writer: json
+    condition: "worldGenType %= End like gen"
+    name: "@MODDATAROOT/worldgen/noise_settings/@registryname.json"
