--- a/src/fabric-1.17/block.definition.yaml
+++ b/src/fabric-1.17/block.definition.yaml
@@ -31,6 +31,15 @@ templates:
     writer: json
     variables: "model=cross;txname=cross"
     name: "@MODASSETSROOT/models/block/@registryname.json"
+  - template: json/block.json.ftl
+    condition: "renderType() #= 13"
+    writer: json
+    variables: "model=crop;txname=crop"
+    name: "@MODASSETSROOT/models/block/@registryname.json"
+  - template: json/block_grass_model.json.ftl
+    condition: "renderType() #= 14"
+    writer: json
+    name: "@MODASSETSROOT/models/block/@registryname.json"
   - template: json/block_cmodel.json.ftl
     condition: "renderType() #= 2"
     writer: json
