--- a/src/fabric-1.17/mappings/mapcolors.yaml
+++ b/src/fabric-1.17/mappings/mapcolors.yaml
@@ -1,14 +1,14 @@
 _default: DEFAULT
-DEFAULT: DEFAULT
+DEFAULT: DEFALUT
 AIR: CLEAR
 GRASS: PALE_GREEN
 SAND: PALE_YELLOW
-CLOTH: WOOL
-TNT: TNT
+CLOTH: WHITE_GRAY
+TNT: BRIGHT_RED
 ICE: PALE_PURPLE
 IRON: IRON_GRAY
-FOLIAGE: GREEN
-SNOW: SNOW
+FOLIAGE: DARK_GREEN
+SNOW: WHITE
 CLAY: LIGHT_BLUE_GRAY
 DIRT: PALE_ORANGE_BROWN
 STONE: DIM_GRAY
