Fix map colors + slab, leaves & pane block bases

--- a/src/fabric-1.17/mappings/mapcolors.yaml
+++ b/src/fabric-1.17/mappings/mapcolors.yaml
@@ -1,5 +1,5 @@
 _default: DEFAULT
-DEFAULT: DEFALUT
+DEFAULT: DEFAULT
 AIR: CLEAR
 GRASS: PALE_GREEN
 SAND: PALE_YELLOW
@@ -10,12 +10,12 @@ IRON: IRON_GRAY
 FOLIAGE: DARK_GREEN
 SNOW: WHITE
 CLAY: LIGHT_BLUE_GRAY
-DIRT: PALE_ORANGE_BROWN
-STONE: DIM_GRAY
-WATER: BRIGHT_BLUE
+DIRT: DIRT_BROWN
+STONE: STONE_GRAY
+WATER: WATER_BLUE
 WOOD: OAK_TAN
 QUARTZ: OFF_WHITE
-ADOBE: ADOBE
+ADOBE: RED
 MAGENTA: MAGENTA
 LIGHT_BLUE: LIGHT_BLUE
 YELLOW: YELLOW
@@ -34,7 +34,7 @@ GOLD: GOLD
 DIAMOND: DIAMOND_BLUE
 LAPIS: LAPIS_BLUE
 EMERALD: EMERALD_GREEN
-OBSIDIAN: OBSIDIAN
+OBSIDIAN: BLACK
 NETHERRACK: DARK_RED
 WHITE_TERRACOTTA: TERRACOTTA_WHITE
 ORANGE_TERRACOTTA: TERRACOTTA_ORANGE
