Fix custom music discs & add local variables

--- a/src/fabric-1.17/generator.yaml
+++ b/src/fabric-1.17/generator.yaml
@@ -1,7 +1,8 @@
 name: Minecraft Fabric for 21w10a (@buildfileversion)
-basefeatures: [model_json]
+basefeatures: [model_json, variables]
+partial_support: [armors, block, dimension, item, overlay]
 status: dev
-buildfileversion: 0.32.1
+buildfileversion: 0.32.2
 
 gradle:
   setup_task: tasks
