--- a/src/fabric-1.17/mappings/biomes.yaml
+++ b/src/fabric-1.17/mappings/biomes.yaml
@@ -14,32 +14,35 @@ nether: NETHER_WASTES
 the_end: THE_END
 frozen_ocean: FROZEN_OCEAN
 frozen_river: FROZEN_RIVER
+snowy_tundra: SNOWY_TUNDRA
 snowy_mountains: SNOWY_MOUNTAINS
 mushroom_fields: MUSHROOM_FIELDS
-mushroom_fields_shore: MUSHROOM_FIELD_SHORE
-beach: BEACH
+mushroom_field_shore: MUSHROOM_FIELD_SHORE
+beaches: BEACH
 desert_hills: DESERT_HILLS
-wooded_hills: WOODED_HILLS
+forest_hills: WOODED_HILLS
 taiga_hills: TAIGA_HILLS
-mountain_edge: MOUNTAIN_EDGE
+smaller_extreme_hills: MOUNTAIN_EDGE
 jungle: JUNGLE
-jungle_hils: JUNGLE_HILLS
+jungle_hills: JUNGLE_HILLS
 jungle_edge: JUNGLE_EDGE
 deep_ocean: DEEP_OCEAN
-stone_shore: STONE_SHORE
-snowy_beach: SNOWY_BEACH
+stone_beach: STONE_SHORE
+cold_beach: SNOWY_BEACH
 birch_forest: BIRCH_FOREST
 birch_forest_hills: BIRCH_FOREST_HILLS
-dark_forest: DARK_FOREST
-snowy_tundra: SNOWY_TAIGA
-giant_tree_taiga: GIANT_TREE_TAIGA
-giant_tree_taiga_hills: GIANT_TREE_TAIGA_HILLS
-wooded_mountains: WOODED_MOUNTAINS
+roofed_forest: DARK_FOREST
+taiga_cold: SNOWY_TAIGA
+taiga_cold_hills: SNOWY_TAIGA_HILLS
+redwood_taiga: GIANT_TREE_TAIGA
+redwood_taiga_hills: GIANT_TREE_TAIGA_HILLS
+extreme_hills_with_trees: WOODED_MOUNTAINS
 savanna: SAVANNA
-savanna_plateau: SAVANNA_PLATEAU
+savanna_rock: SAVANNA_PLATEAU
 badlands: BADLANDS
 wooded_badlands_plateau: WOODED_BADLANDS_PLATEAU
 badlands_plateau: BADLANDS_PLATEAU
+void: THE_VOID
 small_end_islands: SMALL_END_ISLANDS
 end_midlands: END_MIDLANDS
 end_highlands: END_HIGHLANDS
@@ -51,28 +54,27 @@ deep_warm_ocean: DEEP_WARM_OCEAN
 deep_lukewarm_ocean: DEEP_LUKEWARM_OCEAN
 deep_cold_ocean: DEEP_COLD_OCEAN
 deep_frozen_ocean: DEEP_FROZEN_OCEAN
-the_void: THE_VOID
-sunflower_plains: SUNFLOWER_PLAINS
-desert_lakes: DESERT_LAKES
-gravelly_mountains: GRAVELLY_MOUNTAINS
-flower_forest: FLOWER_FOREST
-taiga_mountains: TAIGA_MOUNTAINS
-swamp_hills: SWAMP_HILLS
-ice_spikes: ICE_SPIKES
-modified_jungle: MODIFIED_JUNGLE
-modified_jungle_edge: MODIFIED_JUNGLE_EDGE
-tall_birch_forest: TALL_BIRCH_FOREST
-tall_birch_hills: TALL_BIRCH_HILLS
-dark_forest_hills: DARK_FOREST_HILLS
-snowy_taiga_mountains: SNOWY_TAIGA_MOUNTAINS
-giant_spruce_taiga: GIANT_SPRUCE_TAIGA
-giant_spruce_taiga_hills: GIANT_SPRUCE_TAIGA_HILLS
-modified_gravelly_mountains: MODIFIED_GRAVELLY_MOUNTAINS
-shattered_savanna: SHATTERED_SAVANNA
-shattered_savanna_plateau: SHATTERED_SAVANNA_PLATEAU
-eroded_badlands: ERODED_BADLANDS
-modified_wooded_badlands_plateau: MODIFIED_WOODED_BADLANDS_PLATEAU
-modified_badlands_plateau: MODIFIED_BADLANDS_PLATEAU
+mutated_plains: SUNFLOWER_PLAINS
+mutated_desert: DESERT_LAKES
+mutated_extreme_hills: GRAVELLY_MOUNTAINS
+mutated_forest: FLOWER_FOREST
+mutated_taiga: TAIGA_MOUNTAINS
+mutated_swampland: SWAMP_HILLS
+mutated_ice_flats: ICE_SPIKES
+mutated_jungle: MODIFIED_JUNGLE
+mutated_jungle_edge: MODIFIED_JUNGLE_EDGE
+mutated_birch_forest: TALL_BIRCH_FOREST
+mutated_birch_forest_hills: TALL_BIRCH_HILLS
+mutated_roofed_forest: DARK_FOREST_HILLS
+mutated_taiga_cold: SNOWY_TAIGA_MOUNTAINS
+mutated_redwood_taiga: GIANT_SPRUCE_TAIGA
+mutated_redwood_taiga_hills: GIANT_SPRUCE_TAIGA_HILLS
+mutated_extreme_hills_with_trees: MODIFIED_GRAVELLY_MOUNTAINS
+mutated_savanna: SHATTERED_SAVANNA
+mutated_savanna_rock: SHATTERED_SAVANNA_PLATEAU
+mutated_mesa: ERODED_BADLANDS
+mutated_mesa_rock: MODIFIED_WOODED_BADLANDS_PLATEAU
+mutated_mesa_clear_rock: MODIFIED_BADLANDS_PLATEAU
 bamboo_jungle: BAMBOO_JUNGLE
 bamboo_jungle_hills: BAMBOO_JUNGLE_HILLS
 soul_sand_valley: SOUL_SAND_VALLEY
